2006-02-16 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Delete file static/setup.txt
	* Localize categories in forms presented by class.mod_web_dmail.php
	* Establish mm relations only with parent category records
	
2006-02-16 Jan-Erik Revsbech <jer@moccompany.com>
	* Add localization of categories.

2006-02-15 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Restructure ext_tables.php and tca.php files

2006-02-14 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Small correction to TCA (old_cat_number)
	* Add scripts and gfx subdirectories in res directory.
	* Move class.tx_directmail_container.php and class.tx_directmail_checkjumpurl.php to res/scripts directory
	* Change tx_directmail_checkjumpurl hook configuration in ext_localconf
	* Add boundaries subdirectory to static directory.
	* Move current setup.text to static/boundaries directory
	* Modify static/boundaries/setup.txt to refer to new location of class.tx_directmail_container.php
	* Change configuration of "Direct Mail Content Boundaries" static template in ext_tables.php
	* Add dmailerping.gif to res/gfx directory.
	* Add plaint text plugin will localized labels in directory pi1.
	* Add static template "Direct Mail Plain Text" in directory static/plaintext.
	* Add configuration of "Direct Mail Plain Text" static template in ext_tables.php
	* Modify boundaries static template to add support for plaintext plugin.

2006-02-13 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Correction to class.tx_directmail_checkjumpurl.php and class.dmailer.php: missing global
	* Modifying grouping of module configuration options.
	* Fix RDCT usability issue by adding selection list of domains.
	* Add use_domain in sys_dmail table and module configuration options.
	* Fix bugtracker issue 253.
	* Make sure long_link_rdct_url is consistent with use_domain when the mail is compiled.
	* Correct small glitches.
